--- a/application/src/App.css
+++ b/application/src/App.css
@@ -163,6 +163,20 @@ ul{
     'area3 area3 area3 area3 area3 area3'
     'area4 area4 area4 area4 area4 area4'!important;
   } */
+  .main-container{
+    display: flex;
+    flex-direction: column;
+  }
+  .Cquote{
+    width: 80% !important;
+    border-right: none !important;
+    padding: 0 10vw;
+    font-size: 280% !important;
+  }
+  .contact-container {
+    transform: translateX(0) !important;
+  }
+  
 }
 /* #slidez{
   width:'200px' !important;
@@ -310,8 +324,8 @@ option{
 
 .blogContent{
   /* background:linear-gradient(to right,#ff9ba293,#ffffff5d); */
-  background-color: #e6e5e535;
-  padding: 5vh 5vw 4vh 5vw;
+  background-color: #ffffff18;
+  padding: 2vh 5vw 4vh 5vw;
   border-radius: 5vw;
   margin:0 4vw 2vh 4vw;
   
@@ -526,4 +540,76 @@ i{
   font-size: 12px;
   color: #c28084;
   font-size: medium;
+}
+
+
+/*Contact us*/
+
+.Cquote{
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: #c28084;
+  color:rgba(255, 255, 255, 0);
+  width: 50%;
+  font-size: 300%;
+  text-align: center;
+  padding: 0 1vw;
+  border-right: var(--primary-color) solid 5px;
+}
+
+.main-container{
+  display: flex;
+}
+.contact-container {
+  transform: translateX(5vw);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px;
+}
+
+.contact-heading {
+  font-size: 30px;
+  margin-bottom: 10px;
+  text-shadow: var(--secondary-color) 1px 1px 1px;
+}
+
+.contact-form {
+  width: 400px;
+  background-color: #fde0e0;
+  padding: 20px;
+  border-radius: 10px;
+  padding: 50px;
+  border:var(--shadow-color) solid 2px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.submit-btn {
+  background-color: #d48c91;
+  color: white;
+  border: none;
+  padding: 1F0px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 40%;
+}
+
+.submit-btn:hover {
+  background-color: #c28084;
 }
