--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,27 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400&display=swap');
 :root{
-  /*--primary-color: #E4959A;
+  /* --primary-color: #7b1c1c;
+  --secondary-color: #ffd9d9;
+  --tertiary-color:#dfdfdf;
+  --shadow-color: #3e3e3e; */
+  /*-------------------------------*/
+  --Heading:#660e0e;
+  --text: #3a1a1a;
+  --bg:#f2f2f2;
+  --table_cell:#c91c1c;
+  --table_data:#ad3232;
+  --table_bg:#961414;
+  --table_text:#f2f2f2;
+  --table_heading:#3a1a1a;
+  /* --primary-color: #E4959A;
   --secondary-color: #FFFFFF;
   --tertiary-color: #FF9BA1;
   --shadow-color:#CDB0B2; */
-  --primary-color: #E4959A;
-  --secondary-color: #FFFFFF;
-  --tertiary-color: #FF9BA1;
-  --shadow-color:#CDB0B2;
 }
-@keyframes heroAnime {
+/* @keyframes heroAnime {
   0% {transform: translate(0%, -14%);}
   50% {transform: translate(-.5%, -16%);}
   100% {transform: translate(0%, -14%);}
-}
+} */
 *{
   scroll-behavior:smooth;
 }
 
 .heroClass{
-  animation-name: heroAnime;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;
+  /* animation-name: heroAnime; */
+  height: 480px;
+  transform: translate(-10%, 0%);
+  /* animation-duration: 4s;
+  animation-iteration-count: infinite; */
 }
 .logo{
   height: 10vh !important;
@@ -33,9 +44,9 @@
   /* margin-right: 2vw; */
 }
 body{
-  background:linear-gradient(to right,var(--secondary-color),var(--tertiary-color));
+  background-color: var(--bg);
   padding: 1vh 4vw;
-  color: var(--primary-color);
+  color: var(--text);
   word-wrap : break-word;
   overflow-x: hidden;
 }
@@ -50,33 +61,35 @@ nav{
   padding: 1vh 0;
   /* margin-right: 2vw; */
 }
-nav.div{
+nav div{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1vh 0;
 }
 button{
-  background: var(--primary-color);
+  background-color: var(--table_cell);
   border: none;
-  border-radius: 50vh;
-  padding: 1vh 1.4vw;
-  color: var(--secondary-color);
-  font-size: 1.7vh;
-  font-weight: 600;
+  border-radius: 10px;
+  padding: 7.5px 15px;
+  color: var(--table_text);
+  font-size: small;
+  font-weight:bolder;
   cursor: pointer;
   margin-right: 2vw;
-  transition: 0.5s;
+  transition: 0.3s;
 }
-nav .butt:hover{
-  font-size: 1.9vh;
-  margin-right: 1.7vw;
-  
+.butt:hover{
+  transform: scale(1.1);
 }
+
 hr{
-  border: 1.5px solid var(--primary-color);
-  margin: 2vh 0;
+  border-radius: 10px;
+  margin: none;
+  padding: 2px;
+  background-color: var(--table_cell);
 }
+
 .mainBody{
   display: flex;
   /* justify-content: space-between; */
@@ -97,23 +110,29 @@ hr{
 }
 
 .smallBox{
-  transform: translate(18vw,-25vh);
+  transform: translate(90%, -60%);
   position: relative;
-  min-width: fit-content;
-  min-height: fit-content;
+  /* min-width: fit-content; */
+  /* min-height: fit-content; */
   border-radius:3.5vh;
-  margin:20px;
-  height:120px;
-  width:200px;
-  padding: 4vh 4.5vw 4.9vh 4vh;
-  background:linear-gradient(to right,var(--secondary-color),var(--tertiary-color))
+  /* margin:10%; */
+  /* height:120px; */
+  width:fit-content;
+  padding: 2% 5% 5% 5%;
+  background-color: var(--text);
 }
 .smallBox li{
-  text-shadow: rgb(255, 255, 255) 0 0 3px;
-  font-weight:500;
+  color: var(--table_text);
+}
+.smallBox h3{
+  color: var(--table_text);
+  width: fit-content !important;
 }
 .criteria li::marker{
-  content: " ✔  ";
+  content: " ✔ ";
+}
+.smallBox li::marker{
+  content: " ✔ ";
 }
 ul{
   padding: 0;
@@ -121,14 +140,14 @@ ul{
   margin-block-end: 0em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 20px;
+  padding-inline-start: 15%;
 }
 .smallBox li ::marker {
     content: " ✔  ";
 }
 ::selection{
-  background: var(--primary-color);
-  color: var(--secondary-color);
+  background: var(--Heading);
+  color: var(--bg);
 }
 @media only screen and (max-width:912px){
   .heading{
@@ -202,6 +221,7 @@ ul{
 } */
 .heading{
   font-size:9vh;
+  color: var(--Heading);
   text-shadow:var(--shadow-color) 2px 1.4px 2px;
   line-height:1;
 }
@@ -244,6 +264,9 @@ select{
 }
 #date, #time{
   width: 150px;
+}
+.tableContent{
+  color: var(--table_bg);
 }
 option{
   color: var(--primary-color);
@@ -328,18 +351,18 @@ option{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: var(--tertiary-color);
+  background: none;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #e4959abe;
+  background: var(--Heading);
   border-radius:100px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--primary-color);
+  background: var(--table_bg);
 }
 
 .blogContent{
@@ -424,8 +447,12 @@ p{
 
 .area1{
   grid-area: area1;
+  text-align: justify;
+  width: clamp(400px,89%,600px);
   /* background-color:#FFFFFF; */
   padding: 2vh 2vw;
+  border-radius: 15px;
+  box-shadow: grey 0 0 5px;
 }
 .area2{
   grid-area: area2;
@@ -436,73 +463,86 @@ p{
   /* background-color: aquamarine; */
 }
 
+.area1 hr{
+  padding: 1px !important;
+}
 .area3{
   grid-area: area3;
   padding-top: 5vh;
-
+  margin-right: 40px;
   /* background-color:#FFFFFF; */
 }
 
 .area4{
   grid-area: area4;
+  text-shadow: none !important;
   padding: 2vh 2vw;
-
+  border-radius: 15px;
+  box-shadow: grey 0 0 5px;
   /* background-color:azure; */
+}
+.area4 hr{
+  padding: 1px !important;
 }
 
 .donation{
   display: grid;
-  grid-gap: 10px;
-  /* background-color: aqua; */
+  row-gap: 50px;
   padding:10px;
   grid-template-areas: 
-  'area1 area1 area1 area1 area1 area1 area1 area2 area2'
-  'area1 area1 area1 area1 area1 area1 area1 area2 area2'
-  'area1 area1 area1 area1 area1 area1 area1 area2 area2'
-  'area1 area1 area1 area1 area1 area1 area1 area2 area2'
+  'area1 area1 area1 area1 area1 area1 area2 area2 area2'
+  'area1 area1 area1 area1 area1 area1 area2 area2 area2'
+  'area1 area1 area1 area1 area1 area1 area2 area2 area2'
+  'area1 area1 area1 area1 area1 area1 area2 area2 area2'
   'area3 area3 area3 area3 area4 area4 area4 area4 area4'
   'area3 area3 area3 area3 area4 area4 area4 area4 area4'
   'area3 area3 area3 area3 area4 area4 area4 area4 area4'
   'area3 area3 area3 area3 area4 area4 area4 area4 area4'
+}
+.donation h1{
+  color: var(--Heading);
+}
+.donation p{
+  color: var(--table_bg);
 }
 
 
 /* for the table */
 
 table {
-  border-collapse: separate;
+  border-collapse:separate;
   border-spacing: 8px;
   width: fit-content;
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
-  border-radius: 15px;
+  background-color: var(--table_heading);
+  color: var(--table_text);
+  border-radius: 10px;
   box-shadow: grey 2px 2px 4px;
   padding: 10px;
 
 }
 
 th {
-  background-color: var(--tertiary-color);
+  background-color: var(--table_cell);
   color: var(--secondary-color);
   padding: 1.5vh 2vw;
   width: fit-content !important;
   /* border: 1px solid var(--secondary-color); */
   text-align: center;
   font-size: 2.2vh;
-  text-shadow: #9c777a 2px 2px;
+  text-shadow: #000000 2px 2px,;
   font-weight:900;
-  border-radius: 15px;
-  box-shadow: grey 2px 2px 4px;
+  border-radius: 5px;
+  box-shadow: rgb(52, 0, 0) 2px 2px 4px 0px, #fe9a9a -1px -1px 4px 0px, inset rgb(52, 0, 0) -1px -1px 2px, inset #ff7171  1px 1px 2px;
 }
 
 td {
-  background-color: var(--secondary-color);
+  background-color: var(--table_data);
   color: var(--primary-color);
   padding: 1vh 2vw;
-  border-radius: 15px;
+  border-radius: 5px;
   border: 1px solid var(--tertiary-color);
   width: fit-content !important;
-  box-shadow: grey 2px 2px 4px;
+  box-shadow: rgb(52, 0, 0) 2px 2px 4px 0px, #fe9a9a -1px -1px 4px 0px, inset rgb(52, 0, 0) -1px -1px 2px, inset #ff7171  1px 1px 2px;
   text-shadow: #9c777a .1px .1px;
   /* text-align: center; */
 
@@ -516,7 +556,7 @@ td {
 
 .footer {
   /* background-color: var(); */
-  color: #c28084;
+  color: var(--text);
   padding: 20px;
   text-align: center;
   text-shadow: 0 0 2px rgb(255, 232, 232);
@@ -532,9 +572,16 @@ td {
 .footer-section {
   margin-bottom: 20px;
 }
+.footer-section:nth-child(2){
+  padding: 0 3.5% !important;
+}
+.footer-section:nth-child(3){
+  padding: 0 1% !important;
+}
+
 
 .footer-section h3 {
-  color: #c28084;
+  color: var(--Heading);
   font-size: 18px;
   margin-bottom: 10px;
 }
@@ -553,9 +600,15 @@ td {
 }
 
 .social-media-links a {
-  color: #c28084;
-  margin-right: 10px;
+  transform: scale(1.4);
+  transition: 200ms;
+  color: var(--Heading);
+  /* margin-right: 10px; */
   font-size: 20px;
+}
+.social-media-links a:hover {
+  color: var(--table_cell);
+  transform: scale(1.6);
 }
 i{
   color: #c28084;
@@ -564,7 +617,8 @@ i{
 .footer-bottom {
   margin-top: 20px;
   font-size: 12px;
-  color: #c28084;
+  color: var(--Heading);
+  font-weight: bolder;
   font-size: medium;
 }
 
@@ -579,7 +633,7 @@ i{
   font-size: 300%;
   text-align: center;
   padding: 0 1vw;
-  border-right: var(--primary-color) solid 5px;
+  border-right: var(--table_cell) solid 5px;
 }
 
 .main-container{
@@ -660,4 +714,10 @@ i{
 .swal-text {
   color: var(--tertiary-color);
   font-size: 16px;
+}
+
+.icons a{
+  padding-left: 5px;
+  color: var(--Heading);
+  transform: scale(1.4);
 }
